Building Makemore Pt3

--- a/nn-zero-to-hero-repo/nn-zero-to-hero/lectures/makemore/makemore_part3_bn.ipynb
+++ b/nn-zero-to-hero-repo/nn-zero-to-hero/lectures/makemore/makemore_part3_bn.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "['emma', 'olivia', 'ava', 'isabella', 'sophia', 'charlotte', 'mia', 'amelia']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "32033"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
     "      X.append(context)\n",
     "      Y.append(ix)\n",
     "      context = context[1:] + [ix] # crop and append\n",
-    "\n",
+    "  \n",
     "  X = torch.tensor(X)\n",
     "  Y = torch.tensor(Y)\n",
     "  print(X.shape, Y.shape)\n",
@@ -981,7 +981,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "MLenv",
    "language": "python",
    "name": "python3"
   },
@@ -995,7 +995,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
